syntax = "proto3";
option go_package = "tsuwari/grpc/eventsub";
package eventsub;
import "google/protobuf/empty.proto"; 

service EventSub {
  rpc SubscribeToEvents(SubscribeToEventsRequest) returns (google.protobuf.Empty) {}
}

message SubscribeToEventsRequest {
  string channelId = 1;
}
